fix overflow bug

--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -32,7 +32,6 @@ main {
 .container {
     position: relative;
     z-index: 2;
-    overflow: auto;
     padding: 10px 20px;
     margin: 0 auto;
     cursor: default;
